2008-04-01  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        Changed Machine::dumpRegisters to take a pointer instead of a reference,
        so gdb understands how to call it.

        * VM/Machine.cpp:
        (KJS::Machine::dumpRegisters):
        (KJS::Machine::privateExecute):
        * VM/Machine.h:

2008-03-31  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Maciej.

        Fix CodeGenerator::addConstant() so it uses the functionExpressions
        counter for function expressions, not the functions counter.

        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::addConstant):

2008-03-31  Sam Weinig  <sam@webkit.org>

        Reviewed by Geoffrey Garen.

        Add emitCode support for TypeOfResolveNode and TypeOfValueNode.
        Added new opcode op_type_of to handle them.

        * VM/CodeBlock.cpp:
        (KJS::CodeBlock::dump):
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::emitNot):
        (KJS::CodeGenerator::emitInstanceOf):
        (KJS::CodeGenerator::emitTypeOf):
        * VM/CodeGenerator.h:
        * VM/Machine.cpp:
        (KJS::jsTypeStringForValue):
        (KJS::Machine::privateExecute):
        * VM/Opcode.h:
        * kjs/nodes.cpp:
        (KJS::TypeOfResolveNode::emitCode):
        (KJS::TypeOfValueNode::emitCode):
        * kjs/nodes.h:

2008-03-31  Sam Weinig  <sam@webkit.org>

        Reviewed by Oliver Hunt.

        Fix non-computed goto version of isOpcode. op_end is a valid opcode.

        * VM/Machine.cpp:
        (KJS::Machine::isOpcode):

2008-03-31  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Maciej Stachowiak.
        
        Added op_post_dec.

2008-03-31  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Geoffrey Garen.

        Add support for FunctionCallDotNode.

        * kjs/nodes.cpp:
        (KJS::FunctionCallDotNode::emitCode):
        * kjs/nodes.h:

2008-03-31  Geoffrey Garen  <ggaren@apple.com>
